--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,13 +1,5 @@
 version: 2.1
 
-orbs: 
-  slack: circleci/slack@4.10.1
-
-parameters:
-  workflow-id:
-    type: string
-    default: "{CIRCLE_WORKFLOW_ID:0:7}"
-
 commands:
   destroy-environment:
     description: delete stacks on failure
@@ -26,8 +18,7 @@ commands:
             aws s3 rm s3://udapeople-<< parameters.workflow-id >> --recursive
             aws cloudformation delete-stack \
               --stack-name udapeople-frontend-<< parameters.workflow-id >> \
-              --region us-east-1
-
+              --region us-east-1  
   reverse-migration:
     description: Reverse migration on failure response
     parameters:
@@ -44,10 +35,8 @@ commands:
             then
               cd ~/project/backend
               npm install
-              npm run migration:revert
-              exit 1
-            fi
-
+              npm run migrations:revert
+            fi         
 jobs:
   build-frontend:
     docker:
@@ -65,7 +54,6 @@ jobs:
       - save_cache:
           paths: [frontend/node_modules]
           key: frontend-build
-      
   build-backend:
     docker:
       - image: circleci/node:13.8.0
@@ -82,7 +70,6 @@ jobs:
       - save_cache:
           paths: [backend/node_modules]
           key: backend-build
-      
   test-frontend:
     docker:
       - image: circleci/node:13.8.0
@@ -109,7 +96,6 @@ jobs:
             cd backend
             npm install
             npm run test
-   
   scan-frontend:
     docker:
       - image: circleci/node:13.8.0
@@ -126,7 +112,6 @@ jobs:
             npm audit fix --audit-level=critical --force
             npm audit fix --force
             npm audit --audit-level=critical --force
-    
   scan-backend:
     docker:
       - image: circleci/node:13.8.0
@@ -140,7 +125,6 @@ jobs:
             cd backend
             npm install
             npm audit fix --audit-level=critical --force
-      
   deploy-infrastructure:
     docker:
       - image: amazon/aws-cli
@@ -155,7 +139,7 @@ jobs:
           command: |
             aws cloudformation deploy \
               --template-file .circleci/files/backend.yml \
-              --tags project=cfcife \
+              --tags project=toluayp3 \
               --stack-name "udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7}" \
               --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}"
       - run:
@@ -163,57 +147,46 @@ jobs:
           command: |
             aws cloudformation deploy \
               --template-file .circleci/files/frontend.yml \
-              --tags project=cfcife \
+              --tags project=toluayp3 \
               --stack-name "udapeople-frontend-${CIRCLE_WORKFLOW_ID:0:7}" \
               --parameter-overrides ID="${CIRCLE_WORKFLOW_ID:0:7}"
       - run:
-          name: Add back-end ip to ansible inventory
+          name: Add back-end DNS to ansible inventory
           command: |
-            echo $(aws ec2 describe-instances \
-            --query 'Reservations[*].Instances[*].PublicIpAddress' \
-            --filters Name=tag:aws:cloudformation:stack-name,Values=udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7} \
-            --output text) >> ~/project/.circleci/ansible/inventory.txt
+            aws ec2 describe-instances \
+              --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" \
+              --region ${AWS_DEFAULT_REGION} \
+              --query "Reservations[*].Instances[*].PublicIpAddress" \
+              --output text >> ~/project/.circleci/ansible/inventory.txt
       - persist_to_workspace:
           root: ~/
           paths:
             - project/.circleci/ansible/inventory.txt
-      - destroy-environment:
-          workflow-id: ${CIRCLE_WORKFLOW_ID:0:7}
   configure-infrastructure:
     docker:
-      - image: python:3.7-alpine3.16
+      - image: python:3.9.0-alpine
     steps:
       - checkout
       - add_ssh_keys:
-         fingerprints:
-          - "01:12:0d:c4:0e:b8:27:3f:6b:00:14:9d:78:ea:dd:0b"
-      - run:
-          name: Install dependencies
-          command: |
-            apk add --update --no-cache tar gzip curl ansible aws-cli
+         fingerprints: ["01:12:0d:c4:0e:b8:27:3f:6b:00:14:9d:78:ea:dd:0b"]
       - attach_workspace:
           at: ~/
       - run:
+          name: Install dependencies
+          command: |
+            apk update
+            apk add --no-cache gzip
+            apk add --no-cache tar
+            apk add --no-cache curl
+            apk add --no-cache --upgrade bash
+            apk add --no-cache --update ansible
+            apk add --no-cache openssh
+            apk add --no-cache aws-cli
+      - run:
           name: Configure server
           command: |
-            # add environment variables to server
-            echo NODE_ENV=production > ~/project/backend/.env
-            echo TYPEORM_CONNECTION=$TYPEORM_CONNECTION >> ~/project/backend/.env
-            echo TYPEORM_DATABASE=$TYPEORM_DATABASE >> ~/project/backend/.env
-            echo TYPEORM_ENTITIES=$TYPEORM_ENTITIES >> ~/project/backend/.env
-            echo TYPEORM_HOST=$TYPEORM_HOST >> ~/project/backend/.env
-            echo TYPEORM_MIGRATIONS=$TYPEORM_MIGRATIONS >> ~/project/backend/.env
-            echo TYPEORM_MIGRATIONS_DIR=$TYPEORM_MIGRATIONS_DIR >> ~/project/backend/.env
-            echo TYPEORM_PASSWORD=$TYPEORM_PASSWORD >> ~/project/backend/.env
-            echo TYPEORM_PORT=$TYPEORM_PORT >> ~/project/backend/.env
-            echo TYPEORM_USERNAME=$TYPEORM_USERNAME >> ~/project/backend/.env
-            cat ~/project/backend/.env
-            cd ~/project/.circleci/ansible/
+            cd .circleci/ansible/
             ansible-playbook -i inventory.txt configure-server.yml
-      - persist_to_workspace:
-          root: ~/
-          paths:
-            - project/backend
       - destroy-environment:
           workflow-id: "${CIRCLE_WORKFLOW_ID:0:7}"
   run-migrations:
@@ -221,54 +194,56 @@ jobs:
       - image: circleci/node:13.8.0
     steps:
       - checkout
-      - run:
-          name: Install dependencies
-          command: |
-            sudo apt install -y tar gzip curl
-            curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
-            unzip -qq awscliv2.zip
-            sudo ./aws/install
       - restore_cache:
           keys: [backend-build]
-      - attach_workspace:
-          at: ~/
       - run:
           name: Run migrations
           command: |
             cd backend
-            npm run migrations >> migrations.txt
-            cat migrations.txt
-      - run:
-          name: Send migration results to kvdb
-          command: |
-            if grep -q "has been executed successfully." ~/project/backend/migrations.txt
-            then
-              curl https://kvdb.io/4Ki8mGdqFEsVFEJFLoCvgM/migration_${CIRCLE_WORKFLOW_ID:0:7} --insecure -d '1'
-            fi
-      - persist_to_workspace:
-          root: ~/
-          paths:
-            - project/backend
-      - destroy-environment:
-          workflow-id: "${CIRCLE_WORKFLOW_ID:0:7}"
-  deploy-frontend:
-    docker:
-      - image: python:3.7-alpine3.16
-    steps:
-      - checkout
+            npm install
+            npm run migrations > migrations_dump.txt
       - run:
           name: Install dependencies
           command: |
-            apk add --update --no-cache tar gzip nodejs npm aws-cli curl
+            sudo apt-get update -y && sudo apt-get install -y python3 \
+            python3-pip python3-setuptools groff less -y && sudo pip3 install --upgrade pip \
+            && sudo apt-get clean && sudo apt-get install curl
+      - run:
+          name: Install awscli
+          command: |
+            pip3 --no-cache-dir install --upgrade awscli
+      - run:
+          name: Send migration results to kvdb
+          command: |
+            if grep -q "has been executed successfully." ~/project/backend/migrations_dump.txt
+            then
+              curl https://kvdb.io/4Ki8mGdqFEsVFEJFLoCvgM/migration_${CIRCLE_WORKFLOW_ID:0:7} --insecure -d '1'
+            fi
+      - reverse-migration:
+          workflow-id: "${CIRCLE_WORKFLOW_ID:0:7}"
+  deploy-frontend:
+    docker:
+      - image: circleci/node:13.8.0
+    steps:
+      - checkout
       - restore_cache:
           keys: [frontend-build]
+      - attach_workspace:
+          at: ~/
+      - run:
+          name: Install dependencies
+          command: |
+            sudo apt-get update \
+            && sudo apt-get install -y tar \
+            && sudo apt-get install -y awscli
       - run:
           name: Get backend url
           command: |
             export BACKEND_IP=$(aws ec2 describe-instances \
-            --query 'Reservations[*].Instances[*].PublicIpAddress' \
-            --filters Name=tag:aws:cloudformation:stack-name,Values=udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7} \
-            --output text)
+              --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" \
+              --region ${AWS_DEFAULT_REGION} \
+              --query "Reservations[*].Instances[*].PublicIpAddress" \
+              --output text)
             export API_URL="http://${BACKEND_IP}:3030"
             echo API_URL="http://${BACKEND_IP}:3030" >> frontend/.env
             cat frontend/.env
@@ -286,32 +261,31 @@ jobs:
           workflow-id: "${CIRCLE_WORKFLOW_ID:0:7}"
   deploy-backend:
     docker:
-      - image: python:3.7-alpine3.16
+      - image: python:3.7-alpine3.11
     steps:
       - checkout
+      - restore_cache:
+          keys: [backend-build]
       - add_ssh_keys:
-         fingerprints:
-          - "01:12:0d:c4:0e:b8:27:3f:6b:00:14:9d:78:ea:dd:0b"
+         fingerprints: ["01:12:0d:c4:0e:b8:27:3f:6b:00:14:9d:78:ea:dd:0b"]
+      - attach_workspace:
+          at: ~/
       - run:
           name: Install dependencies
           command: |
-            apk add --update --no-cache tar gzip ansible nodejs npm aws-cli curl
-      - restore_cache:
-          keys: [backend-build]
-      - attach_workspace:
-          at: ~/
+            apk add --update tar gzip ansible openssh nodejs npm 
+            pip3 install awscli
       - run:
           name: Deploy backend objects
           command: |
             cd backend
-            npm install
+            npm i
             npm run build
             cd ..
             tar -C backend -czvf artifact.tar.gz .
-            mkdir -p ~/project/.circleci/ansible/roles/deploy/files/
-            mv artifact.tar.gz .circleci/ansible/roles/deploy/files/artifact.tar.gz
             cd .circleci/ansible
-            echo "Contents  of the inventory.txt file is -------$(cat inventory.txt)"
+            echo "Contents  of the inventory.txt file is -------"
+            cat inventory.txt
             ansible-playbook -i inventory.txt deploy-backend.yml
       - destroy-environment:
           workflow-id: "${CIRCLE_WORKFLOW_ID:0:7}"
@@ -319,35 +293,38 @@ jobs:
           workflow-id: "${CIRCLE_WORKFLOW_ID:0:7}"
   smoke-test:
     docker:
-      - image: python:3.7-alpine3.16
+      - image: amazon/aws-cli
     steps:
       - checkout
       - run:
           name: Install dependencies
           command: |
-            apk add --update --no-cache curl aws-cli nodejs npm tar gzip
+            yum install -y curl
       - run:
-          name: Backend smoke test
+          name: Get backend url and backend smoke test
           command: |
-            export BACKEND_IP=$(aws ec2 describe-instances \
-            --query 'Reservations[*].Instances[*].PublicIpAddress' \
-            --filters Name=tag:aws:cloudformation:stack-name,Values=udapeople-backend-${CIRCLE_WORKFLOW_ID:0:7} \
-            --output text)
+            BACKEND_IP=$(aws ec2 describe-instances \
+              --filters "Name=tag:Name,Values=backend-${CIRCLE_WORKFLOW_ID:0:7}" \
+              --region ${AWS_DEFAULT_REGION} \
+              --query "Reservations[*].Instances[*].PublicIpAddress" \
+              --output text)
             export API_URL="http://${BACKEND_IP}:3030"
-            echo $API_URL
-            if curl "${API_URL}/api/status" | grep "ok"
+            echo  "${API_URL}"
+            if curl -s ${API_URL}/api/status | grep "ok"
             then
               exit 0
             else
-              exit 0
+              exit 1
             fi
+            #gddggdd
       - run:
           name: Frontend smoke test.
           command: |
-            export URL="http://udapeople-${CIRCLE_WORKFLOW_ID:0:7}.s3-website-us-east-1.amazonaws.com/#/employees"            
-            echo $URL 
+            URL="http://udapeople-${CIRCLE_WORKFLOW_ID:0:7}.s3-website-us-east-1.amazonaws.com/#/employees"            
+            echo ${URL} 
             if curl -s ${URL} | grep "Welcome"
             then
+              # Change this to 0 after the job fails
               exit 0
             else
               exit 1
@@ -358,62 +335,56 @@ jobs:
           workflow-id: "${CIRCLE_WORKFLOW_ID:0:7}"
   cloudfront-update:
     docker:
-      - image: circleci/node:13.8.0
+      - image: amazon/aws-cli
     steps:
       - checkout
       - run:
           name: Install dependencies
           command: |
-            sudo apt install tar gzip curl
-            curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
-            unzip -qq awscliv2.zip
-            sudo ./aws/install
+            yum install -y tar gzip curl
+            curl -sL https://rpm.nodesource.com/setup_10.x | bash -
+            yum install -y nodejs
+      - run:
+          name: Store old WorkflowID in kvdb for cleanup phase
+          working_directory: ./.circleci/files
+          command: |
+            WorkflowID=$(aws cloudformation \
+              list-exports --query "Exports[?Name==\`WorkflowID\`].Value" \
+              --no-paginate --output text)
+            curl --insecure https://kvdb.io/4Ki8mGdqFEsVFEJFLoCvgM/WorkflowID -d $WorkflowID
       - run:
           name: Update cloudfront distribution
           command: |
-            export OldWorkflowID=$(aws cloudformation list-exports \
-            --query "Exports[?Name==\`WorkflowID\`].Value" \
-            --no-paginate --output text)
-
             aws cloudformation deploy \
               --template-file .circleci/files/cloudfront.yml \
               --stack-name InitialStack \
-              --parameter-overrides WorkflowID="${CIRCLE_WORKFLOW_ID:0:7}" \
+              --parameter-overrides WorkflowID="udapeople-${CIRCLE_WORKFLOW_ID:0:7}"\
               --tags project=udapeople
-            
-            echo OldWorkflowID: "${OldWorkflowID}"
-            echo Current Workflow: "${CIRCLE_WORKFLOW_ID:0:7}"
-      - destroy-environment:
-          workflow-id: "${CIRCLE_WORKFLOW_ID:0:7}"
       - reverse-migration:
-          workflow-id: "${CIRCLE_WORKFLOW_ID:0:7}"
-  #Cleanup old environment
+          workflow-id: ${CIRCLE_WORKFLOW_ID:0:7}
+          
   cleanup:
     docker:
       - image: amazon/aws-cli
     steps:
       - checkout
       - run:
-          name: Get old stack workflow id
+          name: Clean up old environment
           command: |
-            export OldWorkflowID=<<pipeline.parameters.workflow-id>>
-
-            export STACKS=$(aws cloudformation list-stacks \
-            --query "StackSummaries[*].StackName" \
-            --stack-status-filter CREATE_COMPLETE --no-paginate --output text)
-
-            echo Stack names: "${STACKS[@]}"
-
-            if [[ "${STACKS[@]}" =~ "${OldWorkflowID}" ]]
+            OldWorkflowID=$(curl --insecure https://kvdb.io/4Ki8mGdqFEsVFEJFLoCvgM/WorkflowID)
+            CurrentWorkflowID=${CIRCLE_WORKFLOW_ID:0:7}
+            if [[ "$CurrentWorkflowID" != "$OldWorkflowID" ]]
             then
-              echo "..................cleaning stacks"..........................
-              aws s3 rm "s3://udapeople-${OldWorkflowID}" --recursive
-              aws cloudformation delete-stack --stack-name "udapeople-backend-${OldWorkflowID}"
-              aws cloudformation delete-stack --stack-name "udapeople-frontend-${OldWorkflowID}"
-            else
-              echo "Error: Cannot cleanup stack"
-            fi
+              echo "$OldWorkflowID!=$CurrentWorkflowID => will delete old version"
+              echo "OldWorkflowID is $OldWorkflowID => the  old version"
+              oldWorkflowIDcut=$(echo $OldWorkflowID | cut -d '-' -f 2)
 
+              aws s3 rm "s3://${OldWorkflowID}" --recursive
+              aws cloudformation delete-stack --stack-name "udapeople-frontend-${oldWorkflowIDcut}"
+              aws cloudformation delete-stack --stack-name "udapeople-backend-${oldWorkflowIDcut}"
+            else
+              echo "$OldWorkflowID==Udapoeple-$CurrentWorkflowID => nothing needs to be done..."
+            fi
 workflows:
   default:
     jobs:
@@ -423,10 +394,10 @@ workflows:
           requires: [build-frontend]
       - test-backend:
           requires: [build-backend]
-      - scan-backend:
-          requires: [build-backend]
       - scan-frontend:
           requires: [build-frontend]
+      - scan-backend:
+          requires: [build-backend]
       - deploy-infrastructure:
           requires: [test-frontend, test-backend, scan-frontend, scan-backend]
       - configure-infrastructure:
@@ -443,3 +414,6 @@ workflows:
           requires: [smoke-test]
       - cleanup:
           requires: [cloudfront-update]
+    
+      
+    
